--- a/artikel.html
+++ b/artikel.html
@@ -163,7 +163,8 @@
                         <br>
                     <a href="index.html"title="Anggrek Vanda.webp ">
                     <img src="images/Anggrek Vanda.webp" alt="Anggrek Vanda.webp" width="400">
-                </h4>    
+                </h4> 
+            </div>   
         <!--End Foto-->
             
 
